feat: adicionar entidade de jogador
